# mp2-lab3-postfix

./: CMakeLists.txt  README.md
TPostfix/: CMakeLists.txt  TPostfix.cpp  TPostfix.h
src/: CMakeLists.txt  TStack.cpp  TStack.h
test/: CMakeLists.txt  main.cpp  test.cpp
